--- a/workspace/apps/portfolio/src/app/layout/nav/nav.component.html
+++ b/workspace/apps/portfolio/src/app/layout/nav/nav.component.html
@@ -9,20 +9,40 @@
       <!-- Mobile menu button -->
       <div class="md:hidden flex items-center">
         <button class="outline-none mobile-menu-button">
-          <svg class="w-6 h-6 text-gray-500" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            viewBox="0 0 24 24" stroke="currentColor">
+          <svg
+            class="w-6 h-6 text-gray-500"
+            fill="none"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
             <path d="M4 6h16M4 12h16M4 18h16"></path>
           </svg>
         </button>
       </div>
       <!-- Desktop Menu -->
       <div class="hidden md:flex items-center space-x-1">
-        <a [routerLink]="['/']" class="py-4 px-2 text-primary border-b-4 border-primary font-semibold">Home</a>
-        <a class="py-4 px-2 text-gray-500 font-semibold hover:text-primary transition duration-300">About</a>
-        <a [routerLink]="['/projects']"
-          class="py-4 px-2 text-gray-500 font-semibold hover:text-primary transition duration-300">Projects</a>
-        <a href="#contact"
-          class="py-4 px-2 text-gray-500 font-semibold hover:text-primary transition duration-300">Contact</a>
+        <a
+          [routerLink]="['/']"
+          class="py-4 px-2 text-primary border-b-4 border-primary font-semibold"
+          >Home</a
+        >
+        <a
+          class="py-4 px-2 text-gray-500 font-semibold hover:text-primary transition duration-300"
+          >About</a
+        >
+        <a
+          [routerLink]="['/projects']"
+          class="py-4 px-2 text-gray-500 font-semibold hover:text-primary transition duration-300"
+          >Projects</a
+        >
+        <a
+          href="#contact"
+          class="py-4 px-2 text-gray-500 font-semibold hover:text-primary transition duration-300"
+          >Contact</a
+        >
       </div>
     </div>
   </div>
